test/functions/iterators/Issue21265.3.good
Issue21265.chpl:14: In function 'test3':
Issue21265.chpl:15: error: array element type cannot be 'nothing'
